# carol-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CarolEngine.sln  README.md  carol_engine.sln
CarolRenderer/: BaseRenderer.cpp  BaseRenderer.h  CarolRenderer.vcxproj  CarolRenderer.vcxproj.filters  FrameResources.cpp  FrameResources.h  MainWindow.cpp  Renderer.cpp  Renderer.h  Renderer.rc  Resource.h  main.cpp  main.h
CarolRenderer/Ambient Occlusion/: Ssao.cpp  Ssao.h
CarolRenderer/Anti-Aliasing/: Taa.cpp  Taa.h
CarolRenderer/DirectX/: Buffer.cpp  Buffer.h  DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorHeap.cpp  DescriptorHeap.h  Display.cpp  Display.h  Heap.cpp  Heap.h  Resource.cpp  Resource.h  Sampler.cpp  Sampler.h  Shader.cpp  Shader.h
CarolRenderer/Manager/: Manager.cpp  Manager.h
CarolRenderer/Resource/: AssimpModel.cpp  AssimpModel.h  Camera.cpp  Camera.h  GameTimer.cpp  GameTimer.h  Light.h  Material.h  Model.cpp  Model.h  SkinnedData.cpp  SkinnedData.h  Texture.cpp  Texture.h
CarolRenderer/Shaders/: BuildOitppll.hlsl  Common.hlsl  Default.hlsl  DrawNormals.hlsl  DrawOitppll.hlsl  Light.hlsl  Shadow.hlsl  SkyBox.hlsl  Ssao.hlsl  SsaoBlur.hlsl  Taa.hlsl  Velocity.hlsl
CarolRenderer/Utils/: Bitset.cpp  Bitset.h  Buddy.cpp  Buddy.h  Common.h
CarolRenderer/Win32/: Renderer.aps  Renderer.rc  resource.h
CarolRenderer/include/: base_renderer.h  global_resources.h  renderer.h
CarolRenderer/shader/: common.hlsli  default.hlsl  light.hlsli  normals.hlsl  oitppll.hlsl  oitppll_build.hlsl  shadow.hlsl  skybox.hlsl  ssao.hlsl  ssao_blur.hlsl  taa.hlsl  velocity.hlsl
CarolRenderer/source/: base_renderer.cpp  global_resources.cpp  renderer.cpp
CarolRenderer/texture/: tile.dds
carol_renderer/: .gitignore  carol_renderer.vcxproj  carol_renderer.vcxproj.filters  main.cpp  main.h  packages.config  xmake.lua
carol_renderer/include/: base_renderer.h  carol.h  dx12.h  global.h  render_pass.h  renderer.h  scene.h  utils.h
images/: pipeline.dot  pipeline.gv
(+341 files in other folders)
